samples/_failures_safe/1761629577_538cbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2da7bd48.c: In function ‘main’:
./samples/SAFE/__tmp_2da7bd48.c:151:39: error: expected ‘)’ at end of input
  151 |     for (int i = 0; i < entry_count; i
      |         ~                             ^
      |                                       )
./samples/SAFE/__tmp_2da7bd48.c:151:5: error: expected declaration or statement at end of input
  151 |     for (int i = 0; i < entry_count; i
      |     ^~~
